Compilerbau/output/MGPLParser.java
// $ANTLR 3.4 /home/nvetter/Projekte/Uni/Compilerbau/MGPL.g 2014-12-03 17:03:46

package antlr.projekt1;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.debug.*;
import java.io.IOException;
import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class MGPLParser extends DebugParser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ANIMATION", "CIRCLE", "DIGIT", "DOWNARROW", "IDF", "LEFTARROW", "LOWCASE", "NUMBER", "ON", "RECTANGLE", "RIGHTARROW", "SINGLE_COMMENT", "SPACE", "TOUCHES", "TRIANGLE", "UPARROW", "UPCASE", "WS", "'!'", "'&&'", "'('", "')'", "'*'", "'+'", "','", "'-'", "'.'", "'/'", "';'", "'<'", "'<='", "'='", "'=='", "'['", "']'", "'else'", "'for'", "'game'", "'if'", "'int'", "'{'", "'||'", "'}'"
    };

    public static final int EOF=-1;
    public static final int T__22=22;
    public static final int T__23=23;
    public static final int T__24=24;
    public static final int T__25=25;
    public static final int T__26=26;
    public static final int T__27=27;
    public static final int T__28=28;
    public static final int T__29=29;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__46=46;
    public static final int ANIMATION=4;
    public static final int CIRCLE=5;
    public static final int DIGIT=6;
    public static final int DOWNARROW=7;
    public static final int IDF=8;
    public static final int LEFTARROW=9;
    public static final int LOWCASE=10;
    public static final int NUMBER=11;
    public static final int ON=12;
    public static final int RECTANGLE=13;
    public static final int RIGHTARROW=14;
    public static final int SINGLE_COMMENT=15;
    public static final int SPACE=16;
    public static final int TOUCHES=17;
    public static final int TRIANGLE=18;
    public static final int UPARROW=19;
    public static final int UPCASE=20;
    public static final int WS=21;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


public static final String[] ruleNames = new String[] {
    "invalidRule", "attrAssList", "var", "decl", "unary", "assStmt", "forStmt", 
    "attrAss", "objType", "konjunkt", "atom", "stmt", "add", "eventBlock", 
    "animBlock", "init", "keyStroke", "block", "expr", "mult", "ifStmt", 
    "op", "stmtBlock", "relat", "objDecl", "prog", "varDecl"
};

public static final boolean[] decisionCanBacktrack = new boolean[] {
    false, // invalid decision
    false, false, false, false, false, false, false, false, false, false, 
        false, false, false, false, false, false, false, false, false, false, 
        false, false, false, false, false, false
};

 
    public int ruleLevel = 0;
    public int getRuleLevel() { return ruleLevel; }
    public void incRuleLevel() { ruleLevel++; }
    public void decRuleLevel() { ruleLevel--; }
    public MGPLParser(TokenStream input) {
        this(input, DebugEventSocketProxy.DEFAULT_DEBUGGER_PORT, new RecognizerSharedState());
    }
    public MGPLParser(TokenStream input, int port, RecognizerSharedState state) {
        super(input, state);
        DebugEventSocketProxy proxy =
            new DebugEventSocketProxy(this,port,adaptor);
        setDebugListener(proxy);
        setTokenStream(new DebugTokenStream(input,proxy));
        try {
            proxy.handshake();
        }
        catch (IOException ioe) {
            reportError(ioe);
        }
        TreeAdaptor adap = new CommonTreeAdaptor();
        setTreeAdaptor(adap);
        proxy.setTreeAdaptor(adap);
    }

public MGPLParser(TokenStream input, DebugEventListener dbg) {
    super(input, dbg);
     
    TreeAdaptor adap = new CommonTreeAdaptor();
    setTreeAdaptor(adap);


}

protected boolean evalPredicate(boolean result, String predicate) {
    dbg.semanticPredicate(result, predicate);
    return result;
}

protected DebugTreeAdaptor adaptor;
public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = new DebugTreeAdaptor(dbg,adaptor);


}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}

    public String[] getTokenNames() { return MGPLParser.tokenNames; }
    public String getGrammarFileName() { return "/home/nvetter/Projekte/Uni/Compilerbau/MGPL.g"; }


    public static class prog_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "prog"
    // /home/nvetter/Projekte/Uni/Compilerbau/MGPL.g:34:1: prog : 'game' IDF '(' ( attrAssList )? ')' ( decl )* stmtBlock ( block )* ;
    public final MGPLParser.prog_return prog() throws RecognitionException {
        MGPLParser.prog_return retval = new MGPLParser.prog_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token string_literal1=null;
        Token IDF2=null;
        Token char_literal3=null;
        Token char_literal5=null;
        MGPLParser.attrAssList_return attrAssList4 =null;

        MGPLParser.decl_return decl6 =null;

        MGPLParser.stmtBlock_return stmtBlock7 =null;

        MGPLParser.block_return block8 =null;


        Object string_literal1_tree=null;
        Object IDF2_tree=null;
        Object char_literal3_tree=null;
        Object char_literal5_tree=null;

        try { dbg.enterRule(getGrammarFileName(), "prog");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(34, 0);

        try {
            // /home/nvetter/Projekte/Uni/Compilerbau/MGPL.g:34:14: ( 'game' IDF '(' ( attrAssList )? ')' ( decl )* stmtBlock ( block )* )
            dbg.enterAlt(1);

            // /home/nvetter/Projekte/Uni/Compilerbau/MGPL.g:34:16: 'game' IDF '(' ( attrAssList )? ')' ( decl )* stmtBlock ( block )*
            {
            root_0 = (Object)adaptor.nil();


            dbg.location(34,16);
            string_literal1=(Token)match(input,41,FOLLOW_41_in_prog280); 
            string_literal1_tree = 
            (Object)adaptor.create(string_literal1)
            ;
            adaptor.addChild(root_0, string_literal1_tree);

            dbg.location(34,23);
            IDF2=(Token)match(input,IDF,FOLLOW_IDF_in_prog282); 
            IDF2_tree = 
            (Object)adaptor.create(IDF2)
            ;
            adaptor.addChild(root_0, IDF2_tree);

            dbg.location(34,27);
            char_literal3=(Token)match(input,24,FOLLOW_24_in_prog284); 
            char_literal3_tree = 
            (Object)adaptor.create(char_literal3)
            ;
            adaptor.addChild(root_0, char_literal3_tree);

            dbg.location(34,31);
            // /home/nvetter/Projekte/Uni/Compilerbau/MGPL.g:34:31: ( attrAssList )?
            int alt1=2;
            try { dbg.enterSubRule(1);
            try { dbg.enterDecision(1, decisionCanBacktrack[1]);

            int LA1_0 = input.LA(1);

            if ( (LA1_0==IDF) ) {
                alt1=1;
            }
            } finally {dbg.exitDecision(1);}

            switch (alt1) {
                case 1 :
                    dbg.enterAlt(1);

                    // /home/nvetter/Projekte/Uni/Compilerbau/MGPL.g:34:31: attrAssList
                    {
                    dbg.location(34,31);
                    pushFollow(FOLLOW_attrAssList_in_prog286);
                    attrAssList4=attrAssList();

                    state._fsp--;

                    adaptor.addChild(root_0, attrAssList4.getTree());

                    }
                    break;

            }
            } finally {dbg.exitSubRule(1);}

            dbg.location(34,44);
            char_literal5=(Token)match(input,25,FOLLOW_25_in_prog289); 
            char_literal5_tree = 
            (Object)adaptor.create(char_literal5)
            ;
            adaptor.addChild(root_0, char_literal5_tree);

            dbg.location(34,48);
            // /home/nvetter/Projekte/Uni/Compilerbau/MGPL.g:34:48: ( decl )*
            try { dbg.enterSubRule(2);

            loop2:
            do {
                int alt2=2;
                try { dbg.enterDecision(2, decisionCanBacktrack[2]);

                int LA2_0 = input.LA(1);

                if ( (LA2_0==CIRCLE||LA2_0==RECTANGLE||LA2_0==TRIANGLE||LA2_0==43) ) {
                    alt2=1;
                }


                } finally {dbg.exitDecision(2);}

                switch (alt2) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // /home/nvetter/Projekte/Uni/Compilerbau/MGPL.g:34:48: decl
            	    {
            	    dbg.location(34,48);
            	    pushFollow(FOLLOW_decl_in_prog291);
            	    decl6=decl();

            	    state._fsp--;

            	    adaptor.addChild(root_0, decl6.getTree());

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);
            } finally {dbg.exitSubRule(2);}

            dbg.location(34,54);
            pushFollow(FOLLOW_stmtBlock_in_prog294);
            stmtBlock7=stmtBlock();

            state._fsp--;

            adaptor.addChild(root_0, stmtBlock7.getTree());
            dbg.location(34,64);
            // /home/nvetter/Projekte/Uni/Compilerbau/MGPL.g:34:64: ( block )*
            try { dbg.enterSubRule(3);

            loop3:
            do {
                int alt3=2;
                try { dbg.enterDecision(3, decisionCanBacktrack[3]);

                int LA3_0 = input.LA(1);

                if ( (LA3_0==ANIMATION||LA3_0==ON) ) {
                    alt3=1;
                }


                } finally {dbg.exitDecision(3);}

                switch (alt3) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // /home/nvetter/Projekte/Uni/Compilerbau/MGPL.g:34:64: block
            	    {
            	    dbg.location(34,64);
            	    pushFollow(FOLLOW_block_in_prog296);
            	    block8=block();

            	    state._fsp--;

            	    adaptor.addChild(root_0, block8.getTree());

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);
            } finally {dbg.exitSubRule(3);}


            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(34, 69);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "prog");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return retval;
    }
    // $ANTLR end "prog"


    public static class decl_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "decl"
    // /home/nvetter/Projekte/Uni/Compilerbau/MGPL.g:35:1: decl : ( varDecl ';' | objDecl ';' );
    public final MGPLParser.decl_return decl() throws RecognitionException {
        MGPLParser.decl_return retval = new MGPLParser.decl_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token char_literal10=null;
        Token char_literal12=null;
        MGPLParser.varDecl_return varDecl9 =null;

        MGPLParser.objDecl_return objDecl11 =null;


        Object char_literal10_tree=null;
        Object char_literal12_tree=null;

        try { dbg.enterRule(getGrammarFileName(), "decl");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(35, 0);

        try {
            // /home/nvetter/Projekte/Uni/Compilerbau/MGPL.g:35:14: ( varDecl ';' | objDecl ';' )
            int alt4=2;
            try { dbg.enterDecision(4, decisionCanBacktrack[4]);

            int LA4_0 = input.LA(1);

            if ( (LA4_0==43) ) {
                alt4=1;
            }
            else if ( (LA4_0==CIRCLE||LA4_0==RECTANGLE||LA4_0==TRIANGLE) ) {
                alt4=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                dbg.recognitionException(nvae);
                throw nvae;

            }
            } finally {dbg.exitDecision(4);}

            switch (alt4) {
                case 1 :
                    dbg.enterAlt(1);

                    // /home/nvetter/Projekte/Uni/Compilerbau/MGPL.g:35:16: varDecl ';'
                    {
                    root_0 = (Object)adaptor.nil();


                    dbg.location(35,16);
                    pushFollow(FOLLOW_varDecl_in_decl312);
                    varDecl9=varDecl();

                    state._fsp--;

                    adaptor.addChild(root_0, varDecl9.getTree());
                    dbg.location(35,24);
                    char_literal10=(Token)match(input,32,FOLLOW_32_in_decl314); 
                    char_literal10_tree = 
                    (Object)adaptor.create(char_literal10)
                    ;
                    adaptor.addChild(root_0, char_literal10_tree);


                    }
                    break;
                case 2 :
                    dbg.enterAlt(2);

                    // /home/nvetter/Projekte/Uni/Compilerbau/MGPL.g:35:30: objDecl ';'
                    {
                    root_0 = (Object)adaptor.nil();


                    dbg.location(35,30);
                    pushFollow(FOLLOW_objDecl_in_decl318);
                    objDecl11=objDecl();

                    state._fsp--;

                    adaptor.addChild(root_0, objDecl11.getTree());
                    dbg.location(35,38);
                    char_literal12=(Token)match(input,32,FOLLOW_32_in_decl320); 
                    char_literal12_tree = 
                    (Object)adaptor.create(char_literal12)
                    ;
                    adaptor.addChild(root_0, char_literal12_tree);


                    }
                    break;

            }
            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(35, 40);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "decl");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return retval;
    }
    // $ANTLR end "decl"


    public static class varDecl_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "varDecl"
    // /home/nvetter/Projekte/Uni/Compilerbau/MGPL.g:36:1: varDecl : 'int' IDF ( ( init )? | '[' NUMBER ']' ) ;
    public final MGPLParser.varDecl_return varDecl() throws RecognitionException {
        MGPLParser.varDecl_return retval = new MGPLParser.varDecl_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token string_literal13=null;
        Token IDF14=null;
        Token char_literal16=null;
        Token NUMBER17=null;
        Token char_literal18=null;
        MGPLParser.init_return init15 =null;


        Object string_literal13_tree=null;
        Object IDF14_tree=null;
        Object char_literal16_tree=null;
        Object NUMBER17_tree=null;
        Object char_literal18_tree=null;

        try { dbg.enterRule(getGrammarFileName(), "varDecl");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(36, 0);

        try {
            // /home/nvetter/Projekte/Uni/Compilerbau/MGPL.g:36:14: ( 'int' IDF ( ( init )? | '[' NUMBER ']' ) )
            dbg.enterAlt(1);

            // /home/nvetter/Projekte/Uni/Compilerbau/MGPL.g:36:16: 'int' IDF ( ( init )? | '[' NUMBER ']' )
            {
            root_0 = (Object)adaptor.nil();


            dbg.location(36,16);
            string_literal13=(Token)match(input,43,FOLLOW_43_in_varDecl332); 
            string_literal13_tree = 
            (Object)adaptor.create(string_literal13)
            ;
            adaptor.addChild(root_0, string_literal13_tree);

            dbg.location(36,22);
            IDF14=(Token)match(input,IDF,FOLLOW_IDF_in_varDecl334); 
            IDF14_tree = 
            (Object)adaptor.create(IDF14)
            ;
            adaptor.addChild(root_0, IDF14_tree);

            dbg.location(36,26);
            // /home/nvetter/Projekte/Uni/Compilerbau/MGPL.g:36:26: ( ( init )? | '[' NUMBER ']' )
            int alt6=2;
            try { dbg.enterSubRule(6);
            try { dbg.enterDecision(6, decisionCanBacktrack[6]);

            int LA6_0 = input.LA(1);

            if ( (LA6_0==32||LA6_0==35) ) {
                alt6=1;
            }
            else if ( (LA6_0==37) ) {
                alt6=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 6, 0, input);

                dbg.recognitionException(nvae);
                throw nvae;

            }
            } finally {dbg.exitDecision(6);}

            switch (alt6) {
                case 1 :
                    dbg.enterAlt(1);

                    // /home/nvetter/Projekte/Uni/Compilerbau/MGPL.g:36:27: ( init )?
                    {
                    dbg.location(36,27);
                    // /home/nvetter/Projekte/Uni/Compilerbau/MGPL.g:36:27: ( init )?
                    int alt5=2;
                    try { dbg.enterSubRule(5);
                    try { dbg.enterDecision(5, decisionCanBacktrack[5]);

                    int LA5_0 = input.LA(1);

                    if ( (LA5_0==35) ) {
                        alt5=1;
                    }
                    } finally {dbg.exitDecision(5);}

                    switch (alt5) {
                        case 1 :
                            dbg.enterAlt(1);

                            // /home/nvetter/Projekte/Uni/Compilerbau/MGPL.g:36:27: init
                            {
                            dbg.location(36,27);
                            pushFollow(FOLLOW_init_in_varDecl337);
                            init15=init();

                            state._fsp--;

                            adaptor.addChild(root_0, init15.getTree());

                            }
                            break;

                    }
                    } finally {dbg.exitSubRule(5);}


                    }
                    break;
                case 2 :
                    dbg.enterAlt(2);

                    // /home/nvetter/Projekte/Uni/Compilerbau/MGPL.g:36:35: '[' NUMBER ']'
                    {
                    dbg.location(36,35);
                    char_literal16=(Token)match(input,37,FOLLOW_37_in_varDecl342); 
                    char_literal16_tree = 
                    (Object)adaptor.create(char_literal16)
                    ;
                    adaptor.addChild(root_0, char_literal16_tree);

                    dbg.location(36,39);
                    NUMBER17=(Token)match(input,NUMBER,FOLLOW_NUMBER_in_varDecl344); 
                    NUMBER17_tree = 
                    (Object)adaptor.create(NUMBER17)
                    ;
                    adaptor.addChild(root_0, NUMBER17_tree);

                    dbg.location(36,46);
                    char_literal18=(Token)match(input,38,FOLLOW_38_in_varDecl346); 
                    char_literal18_tree = 
                    (Object)adaptor.create(char_literal18)
                    ;
                    adaptor.addChild(root_0, char_literal18_tree);


                    }
                    break;

            }
            } finally {dbg.exitSubRule(6);}


            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(36, 50);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "varDecl");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return retval;
    }
    // $ANTLR end "varDecl"


    public static class init_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "init"
    // /home/nvetter/Projekte/Uni/Compilerbau/MGPL.g:37:1: init : '=' expr ;
    public final MGPLParser.init_return init() throws RecognitionException {
        MGPLParser.init_return retval = new MGPLParser.init_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token char_literal19=null;
        MGPLParser.expr_return expr20 =null;


        Object char_literal19_tree=null;

        try { dbg.enterRule(getGrammarFileName(), "init");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(37, 0);

        try {
            // /home/nvetter/Projekte/Uni/Compilerbau/MGPL.g:37:14: ( '=' expr )
            dbg.enterAlt(1);

            // /home/nvetter/Projekte/Uni/Compilerbau/MGPL.g:37:16: '=' expr
            {
            root_0 = (Object)adaptor.nil();


            dbg.location(37,16);
            char_literal19=(Token)match(input,35,FOLLOW_35_in_init363); 
            char_literal19_tree = 
            (Object)adaptor.create(char_literal19)
            ;
            adaptor.addChild(root_0, char_literal19_tree);

            dbg.location(37,20);
            pushFollow(FOLLOW_expr_in_init365);
            expr20=expr();

            state._fsp--;

            adaptor.addChild(root_0, expr20.getTree());

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(37, 24);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "init");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return retval;
    }
    // $ANTLR end "init"


    public static class objDecl_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "objDecl"
    // /home/nvetter/Projekte/Uni/Compilerbau/MGPL.g:38:1: objDecl : objType IDF ( '(' ( attrAssList )? ')' | '[' NUMBER ']' ) ;
    public final MGPLParser.objDecl_return objDecl() throws RecognitionException {
        MGPLParser.objDecl_return retval = new MGPLParser.objDecl_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token IDF22=null;
        Token char_literal23=null;
        Token char_literal25=null;
        Token char_literal26=null;
        Token NUMBER27=null;
        Token char_literal28=null;
        MGPLParser.objType_return objType21 =null;

        MGPLParser.attrAssList_return attrAssList24 =null;


        Object IDF22_tree=null;
        Object char_literal23_tree=null;
        Object char_literal25_tree=null;
        Object char_literal26_tree=null;
        Object NUMBER27_tree=null;
        Object char_literal28_tree=null;

        try { dbg.enterRule(getGrammarFileName(), "objDecl");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(38, 0);

        try {
            // /home/nvetter/Projekte/Uni/Compilerbau/MGPL.g:38:14: ( objType IDF ( '(' ( attrAssList )? ')' | '[' NUMBER ']' ) )
            dbg.enterAlt(1);

            // /home/nvetter/Projekte/Uni/Compilerbau/MGPL.g:38:16: objType IDF ( '(' ( attrAssList )? ')' | '[' NUMBER ']' )
            {
            root_0 = (Object)adaptor.nil();


            dbg.location(38,16);
            pushFollow(FOLLOW_objType_in_objDecl378);
            objType21=objType();

            state._fsp--;

            adaptor.addChild(root_0, objType21.getTree());
            dbg.location(38,24);
            IDF22=(Token)match(input,IDF,FOLLOW_IDF_in_objDecl380); 
            IDF22_tree = 
            (Object)adaptor.create(IDF22)
            ;
            adaptor.addChild(root_0, IDF22_tree);

            dbg.location(38,28);
            // /home/nvetter/Projekte/Uni/Compilerbau/MGPL.g:38:28: ( '(' ( attrAssList )? ')' | '[' NUMBER ']' )
            int alt8=2;
            try { dbg.enterSubRule(8);
            try { dbg.enterDecision(8, decisionCanBacktrack[8]);

            int LA8_0 = input.LA(1);

            if ( (LA8_0==24) ) {
                alt8=1;
            }
            else if ( (LA8_0==37) ) {
                alt8=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 8, 0, input);

                dbg.recognitionException(nvae);
                throw nvae;

            }
            } finally {dbg.exitDecision(8);}

            switch (alt8) {
                case 1 :
                    dbg.enterAlt(1);

                    // /home/nvetter/Projekte/Uni/Compilerbau/MGPL.g:38:29: '(' ( attrAssList )? ')'
                    {
                    dbg.location(38,29);
                    char_literal23=(Token)match(input,24,FOLLOW_24_in_objDecl383); 
                    char_literal23_tree = 
                    (Object)adaptor.create(char_literal23)
                    ;
                    adaptor.addChild(root_0, char_literal23_tree);

                    dbg.location(38,33);
                    // /home/nvetter/Projekte/Uni/Compilerbau/MGPL.g:38:33: ( attrAssList )?
                    int alt7=2;
                    try { dbg.enterSubRule(7);
                    try { dbg.enterDecision(7, decisionCanBacktrack[7]);

                    int LA7_0 = input.LA(1);

                    if ( (LA7_0==IDF) ) {
                        alt7=1;
                    }
                    } finally {dbg.exitDecision(7);}

                    switch (alt7) {
                        case 1 :
                            dbg.enterAlt(1);

                            // /home/nvetter/Projekte/Uni/Compilerbau/MGPL.g:38:33: attrAssList
                            {
                            dbg.location(38,33);
                            pushFollow(FOLLOW_attrAssList_in_objDecl385);
                            attrAssList24=attrAssList();

                            state._fsp--;

                            adaptor.addChild(root_0, attrAssList24.getTree());

                            }
                            break;

                    }
                    } finally {dbg.exitSubRule(7);}

                    dbg.location(38,46);
                    char_literal25=(Token)match(input,25,FOLLOW_25_in_objDecl388); 
                    char_literal25_tree = 
                    (Object)adaptor.create(char_literal25)
                    ;
                    adaptor.addChild(root_0, char_literal25_tree);


                    }
                    break;
                case 2 :
                    dbg.enterAlt(2);

                    // /home/nvetter/Projekte/Uni/Compilerbau/MGPL.g:38:52: '[' NUMBER ']'
                    {
                    dbg.location(38,52);
                    char_literal26=(Token)match(input,37,FOLLOW_37_in_objDecl392); 
                    char_literal26_tree = 
                    (Object)adaptor.create(char_literal26)
                    ;
                    adaptor.addChild(root_0, char_literal26_tree);

                    dbg.location(38,56);
                    NUMBER27=(Token)match(input,NUMBER,FOLLOW_NUMBER_in_objDecl394); 
                    NUMBER27_tree = 
                    (Object)adaptor.create(NUMBER27)
                    ;
                    adaptor.addChild(root_0, NUMBER27_tree);

                    dbg.location(38,63);
                    char_literal28=(Token)match(input,38,FOLLOW_38_in_objDecl396); 
                    char_literal28_tree = 
                    (Object)adaptor.create(char_literal28)
                    ;
                    adaptor.addChild(root_0, char_literal28_tree);


                    }
                    break;

            }
            } finally {dbg.exitSubRule(8);}


            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(38, 67);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "objDecl");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return retval;
    }
    // $ANTLR end "objDecl"


    public static class objType_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "objType"
    // /home/nvetter/Projekte/Uni/Compilerbau/MGPL.g:39:1: objType : ( RECTANGLE | TRIANGLE | CIRCLE );
    public final MGPLParser.objType_return objType() throws RecognitionException {
        MGPLParser.objType_return retval = new MGPLParser.objType_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token set29=null;

        Object set29_tree=null;

        try { dbg.enterRule(getGrammarFileName(), "objType");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(39, 0);

        try {
            // /home/nvetter/Projekte/Uni/Compilerbau/MGPL.g:39:14: ( RECTANGLE | TRIANGLE | CIRCLE )
            dbg.enterAlt(1);

            // /home/nvetter/Projekte/Uni/Compilerbau/MGPL.g:
            {
            root_0 = (Object)adaptor.nil();


            dbg.location(39,14);
            set29=(Token)input.LT(1);

            if ( input.LA(1)==CIRCLE||input.LA(1)==RECTANGLE||input.LA(1)==TRIANGLE ) {
                input.consume();
                adaptor.addChild(root_0, 
                (Object)adaptor.create(set29)
                );
                state.errorRecovery=false;
            }
            else {
                MismatchedSetException mse = new MismatchedSetException(null,input);
                dbg.recognitionException(mse);
                throw mse;
            }


            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(39, 44);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "objType");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return retval;
    }
    // $ANTLR end "objType"


    public static class attrAssList_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };
